removed packrat, fixed bugs, added HOR VER columns
@cklunch @scelmendorf  - Please review this code. So far my testing is
going okay minus Cautions listed below. I’ve caught most edge cases
that I can think of but post issues as you find them.

Removed:
* Packrat was disturbing my environment so I removed it.

Bugs fixed:
* no longer includes any stacked files in the output folder into
subsequent runs.
* correctly reads table names from IS data files published through new
pub system (DAPS)

New feature:
* for any IS data product with HOR, VER, makes 2 new columns so that
this information is not lost in stacked files.

Cautions:
* Stream discharge files are missing final line endings in every data
file, so R complains but does stack the files. This should be fixed
when the old data are published using the new system.
* The variables file for NEON_phys-soil-megapit is a tab-delimited file
saved as a .csv. So the stacker code can’t get variables information
and fails.

--- a/neonDataStackR/DESCRIPTION
+++ b/neonDataStackR/DESCRIPTION
@@ -8,6 +8,9 @@ Description: NEON data packages are delivered as monthly zip files packaged with
     zip file. This package unzips all files and provides options to organize the data files
     and merge the monthly data files into different configurations. This includes grouping 
     data by site or type.
+Imports:
+    dplyr,
+    gdata
 License: MIT
 Encoding: UTF-8
 LazyData: true
