put in a method to copy first externalSummary file to stackedFiles
Also some clean up for table_types.

--- a/neonDataStackR/NAMESPACE
+++ b/neonDataStackR/NAMESPACE
@@ -7,3 +7,5 @@ export(stackByTable)
 export(zipsByProduct)
 importFrom(dplyr,full_join)
 importFrom(gdata,humanReadable)
+importFrom(httr,GET)
+importFrom(jsonlite,fromJSON)
