Minor bug fixes

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -6,6 +6,7 @@ export(getPackage)
 export(listFilesInZip)
 export(listZipfiles)
 export(stackByTable)
+export(transformFileToGeoCSV)
 export(zipsByProduct)
 importFrom(gdata,humanReadable)
 importFrom(httr,GET)
