--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -19,3 +19,4 @@ BugReports: https://github.com/NEONScience/NEON-utilities/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
+Suggests: testthat
