adjustments for CRAN

--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: neonUtilities
 Version: 1.0.0
 Date: 2018-10-19
-Title: Utilities for working with NEON data
+Title: Utilities for Working with NEON Data
 Author: Christine Laney <claney@battelleecology.org>, Claire Lunch <clunch@battelleecology.org>
 Maintainer: Claire Lunch <clunch@battelleecology.org>
-Description: NEON data packages can be accessed through the NEON Data Portal (http://data.neonscience.org)
-    or through the NEON Data API (see http://data.neonscience.org/data-api for documentation). Data delivered from
+Description: NEON data packages can be accessed through the NEON Data Portal <http://data.neonscience.org>
+    or through the NEON Data API (see <http://data.neonscience.org/data-api> for documentation). Data delivered from
     the Data Portal are provided as monthly zip files packaged within a parent zip file, while individual files
     can be accessed from the API. This package provides tools that aid in discovering, downloading, and reformatting 
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
-    converting formats. For more information, see the readme file at https://github.com/NEONScience/NEON-utilities.
+    converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.2.0)
 Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, devtools
 License: AGPL-3 + file LICENSE
