updates responding to CRAN comments

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -5,6 +5,8 @@ export(byTileAOP)
 export(getAvg)
 export(getFilesize)
 export(getPackage)
+export(getProductInfo)
+export(getProductSensors)
 export(listFilesInZip)
 export(listZipfiles)
 export(stackByTable)
