--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -10,7 +10,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     can be accessed from the API. This package provides tools that aid in discovering, downloading, and reformatting 
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
-Depends: R (>= 3.2.0)
+Depends: R (>= 3.4.0)
 Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, devtools
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
@@ -18,3 +18,4 @@ BugReports: https://github.com/NEONScience/NEON-utilities/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
+Suggests: testthat
