--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -10,6 +10,7 @@ export(getProductInfo)
 export(getProductSensors)
 export(listFilesInZip)
 export(listZipfiles)
+export(loadByProduct)
 export(stackByTable)
 export(transformFileToGeoCSV)
 export(zipsByProduct)
