--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -8,11 +8,14 @@ export(getFilesize)
 export(getPackage)
 export(getProductInfo)
 export(getProductSensors)
+export(getTaxonTable)
 export(listFilesInZip)
 export(listZipfiles)
 export(stackByTable)
 export(transformFileToGeoCSV)
 export(zipsByProduct)
+import(httr)
+import(jsonlite)
 import(lubridate)
 import(readr)
 import(tidyr)
