--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -11,6 +11,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.4.0)
+biocViews:
 Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, rhdf5
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
