conversion to long format and re-name

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -14,7 +14,7 @@ export(listFilesInZip)
 export(listZipfiles)
 export(loadByProduct)
 export(stackByTable)
-export(stackEC)
+export(stackEddy)
 export(transformFileToGeoCSV)
 export(zipsByProduct)
 export(zipsByURI)
