fixed dp04 error from wide to long conversion

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -9,7 +9,7 @@ export(getPackage)
 export(getProductInfo)
 export(getProductSensors)
 export(getTaxonTable)
-export(getVarsEC)
+export(getVarsEddy)
 export(listFilesInZip)
 export(listZipfiles)
 export(loadByProduct)
