--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -12,7 +12,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.4.0)
 biocViews:
-Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, rhdf5
+Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, rhdf5, raster
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
 BugReports: https://github.com/NEONScience/NEON-utilities/issues
