--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -13,7 +13,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
 Depends: R (>= 3.4.0)
 biocViews:
 Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, stringr, pbapply, parallel
-Suggests: rhdf5, raster, testthat
+Suggests: rhdf5, raster, testthat, magrittr
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
 BugReports: https://github.com/NEONScience/NEON-utilities/issues
