data type handling & date conversion

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -14,6 +14,7 @@ export(getVarsEddy)
 export(listFilesInZip)
 export(listZipfiles)
 export(loadByProduct)
+export(readTableNEON)
 export(stackByTable)
 export(stackEddy)
 export(transformFileToGeoCSV)
