--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -9,6 +9,7 @@ export(getFilesize)
 export(getPackage)
 export(getProductInfo)
 export(getProductSensors)
+export(getReadmePublicationDate)
 export(getTaxonTable)
 export(getVarsEddy)
 export(listFilesInZip)
