updated urls in description file

--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -4,8 +4,8 @@ Date: 2019-12-02
 Title: Utilities for Working with NEON Data
 Author: Christine Laney <claney@battelleecology.org>, Claire Lunch <clunch@battelleecology.org>
 Maintainer: Claire Lunch <clunch@battelleecology.org>
-Description: NEON data packages can be accessed through the NEON Data Portal <http://data.neonscience.org>
-    or through the NEON Data API (see <http://data.neonscience.org/data-api> for documentation). Data delivered from
+Description: NEON data packages can be accessed through the NEON Data Portal <https://data.neonscience.org>
+    or through the NEON Data API (see <https://data.neonscience.org/data-api> for documentation). Data delivered from
     the Data Portal are provided as monthly zip files packaged within a parent zip file, while individual files
     can be accessed from the API. This package provides tools that aid in discovering, downloading, and reformatting 
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
