--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2019-12-02
 Title: Utilities for Working with NEON Data
 Author: Christine Laney <claney@battelleecology.org>, Claire Lunch <clunch@battelleecology.org>
 Maintainer: Claire Lunch <clunch@battelleecology.org>
-Description: NEON data packages can be accessed through the NEON Data Portal <https://data.neonscience.org>
+Description: NEON data packages can be accessed through the NEON Data Portal <https://data.neonscience.org/home>
     or through the NEON Data API (see <https://data.neonscience.org/data-api> for documentation). Data delivered from
     the Data Portal are provided as monthly zip files packaged within a parent zip file, while individual files
     can be accessed from the API. This package provides tools that aid in discovering, downloading, and reformatting 
