--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: neonUtilities
-Version: 1.3.3
-Date: 2020-01-07
+Version: 1.3.4
+Date: 2020-03-03
 Title: Utilities for Working with NEON Data
-Authors@R: c(person("National Ecological Observatory Network", role="aut"), person("Claire","Lunch",email="clunch@battelleecology.org",role=c("cre","ctb")), person("Christine","Laney",role="ctb"), person("Nathan","Mietkiewicz",role="ctb"), person("Eric","Sokol",role="ctb"), person("Kaelin","Cawley",role="ctb"))
+Authors@R: c(person("National Ecological Observatory Network", role="aut"), person("Claire","Lunch",email="clunch@battelleecology.org",role=c("aut","cre","ctb")), person("Christine","Laney",role=c("aut","ctb")), person("Nathan","Mietkiewicz",role=c("aut","ctb")), person("Eric","Sokol",role=c("aut","ctb")), person("Kaelin","Cawley",role=c("aut","ctb")))
 Description: NEON data packages can be accessed through the NEON Data Portal <https://data.neonscience.org/home>
     or through the NEON Data API (see <https://data.neonscience.org/data-api> for documentation). Data delivered from
     the Data Portal are provided as monthly zip files packaged within a parent zip file, while individual files
