--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: neonUtilities
 Version: 1.3.5
-Date: 2020-05-29
+Date: 2020-06-03
 Title: Utilities for Working with NEON Data
 Authors@R: c(person("Claire","Lunch",email="clunch@battelleecology.org",role=c("aut","cre","ctb")), person("Christine","Laney",role=c("aut","ctb")), person("Nathan","Mietkiewicz",role=c("aut","ctb")), person("Eric","Sokol",role=c("aut","ctb")), person("Kaelin","Cawley",role=c("aut","ctb")), person("NEON (National Ecological Observatory Network)", role="aut"))
 Description: NEON data packages can be accessed through the NEON Data Portal <https://data.neonscience.org/home>
@@ -11,7 +11,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.4.0)
 biocViews:
-Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, stringr, pbapply, parallel, plyr
+Imports: dplyr(>= 0.7.1), gdata(>= 2.18), httr, jsonlite, downloader, data.table, utils, stats, lubridate, readr, tidyr, stringr, pbapply, parallel, plyr, curl
 Suggests: rhdf5, raster, sp, testthat, magrittr
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
