change avg input to timeIndex

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -10,6 +10,7 @@ export(getPackage)
 export(getProductInfo)
 export(getProductSensors)
 export(getTaxonTable)
+export(getTimeIndex)
 export(getVarsEddy)
 export(listFilesInZip)
 export(listZipfiles)
