remove gdata dependency

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -2,10 +2,10 @@
 
 export(byFileAOP)
 export(byTileAOP)
+export(convByteSize)
 export(footRaster)
 export(getAvg)
 export(getDatatable)
-export(getFilesize)
 export(getPackage)
 export(getProductInfo)
 export(getProductSensors)
@@ -26,6 +26,5 @@ import(jsonlite)
 import(lubridate)
 import(readr)
 import(tidyr)
-importFrom(gdata,humanReadable)
 importFrom(httr,GET)
 importFrom(jsonlite,fromJSON)
