--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: neonUtilities
-Version: 2.1.1.9000
+Version: 2.1.1.9900
 Date: 2021-06-23
 Title: Utilities for Working with NEON Data
 Authors@R: c(person("Claire","Lunch",email="clunch@battelleecology.org",role=c("aut","cre","ctb")), person("Christine","Laney",role=c("aut","ctb")), person("Nathan","Mietkiewicz",role=c("aut","ctb")), person("Eric","Sokol",role=c("aut","ctb")), person("Kaelin","Cawley",role=c("aut","ctb")), person("NEON (National Ecological Observatory Network)", role="aut"))
@@ -11,7 +11,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.4.0)
 biocViews:
-Imports: dplyr(>= 0.7.1), httr, jsonlite, downloader, data.table, utils, R.utils, stats, readr, tidyr, stringr, pbapply, parallel, curl
+Imports: dplyr(>= 0.7.1), httr, jsonlite, downloader, data.table, utils, R.utils, stats, tidyr, stringr, pbapply, parallel, curl
 Suggests: rhdf5, raster, sp, testthat, magrittr
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
