--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: neonUtilities
-Version: 2.2.2.9200
-Date: 2023-04-25
+Version: 2.2.3.9000
+Date: 2023-05-05
 Title: Utilities for Working with NEON Data
 Authors@R: c(person("Claire","Lunch",email="clunch@battelleecology.org",role=c("aut","cre","ctb")), person("Christine","Laney",role=c("aut","ctb")), person("Nathan","Mietkiewicz",role=c("aut","ctb")), person("Eric","Sokol",role=c("aut","ctb")), person("Kaelin","Cawley",role=c("aut","ctb")), person("NEON (National Ecological Observatory Network)", role="aut"))
 Description: NEON data packages can be accessed through the NEON Data Portal <https://www.neonscience.org>
@@ -11,7 +11,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.6.0)
 Imports: httr, jsonlite, downloader, data.table, utils, R.utils, stats, tidyr, stringr, pbapply, parallel, curl
-Suggests: rhdf5, raster, sp, testthat
+Suggests: rhdf5, terra, testthat
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
 BugReports: https://github.com/NEONScience/NEON-utilities/issues
