--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -10,8 +10,8 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.6)
-Imports: httr, jsonlite, downloader, data.table, utils, R.utils, stats, tidyr, stringr, pbapply, parallel, curl
-Suggests: rhdf5, terra, testthat, fasttime
+Imports: httr, jsonlite, downloader, data.table, utils, R.utils, stats, tidyr, stringr, pbapply, parallel, curl, arrow
+Suggests: rhdf5, terra, testthat, fasttime, dplyr
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
 BugReports: https://github.com/NEONScience/NEON-utilities/issues
