expanded arrow options

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -17,7 +17,9 @@ export(getTaxonTable)
 export(getTimeIndex)
 export(getVarsEddy)
 export(loadByProduct)
+export(queryFiles)
 export(readTableNEON)
+export(schemaFromVar)
 export(stackByTable)
 export(stackEddy)
 export(stackFromStore)
