dataset query function

--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -4,6 +4,7 @@ export(byEventSIM)
 export(byFileAOP)
 export(byTileAOP)
 export(convByteSize)
+export(datasetQuery)
 export(footRaster)
 export(getAvg)
 export(getCitation)
