--- a/neonUtilities/NAMESPACE
+++ b/neonUtilities/NAMESPACE
@@ -25,6 +25,7 @@ export(schemaFromVar)
 export(stackByTable)
 export(stackEddy)
 export(stackFromStore)
+export(tokenDate)
 export(transformFileToGeoCSV)
 export(zipsByProduct)
 export(zipsByURI)
