--- a/neonUtilities/DESCRIPTION
+++ b/neonUtilities/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: neonUtilities
-Version: 3.0.0
-Date: 2025-07-21
+Version: 3.0.1.9000
+Date: 2025-07-29
 Title: Utilities for Working with NEON Data
 Authors@R: c(person("Claire","Lunch",email="clunch@battelleecology.org",role=c("aut","cre","ctb")), person("Christine","Laney",role=c("aut","ctb")), person("Nathan","Mietkiewicz",role=c("aut","ctb")), person("Eric","Sokol",role=c("aut","ctb")), person("Kaelin","Cawley",role=c("aut","ctb")), person("NEON (National Ecological Observatory Network)", role="aut"))
 Description: NEON data packages can be accessed through the NEON Data Portal <https://www.neonscience.org>
@@ -10,7 +10,7 @@ Description: NEON data packages can be accessed through the NEON Data Portal <ht
     data prior to use in analyses. This includes downloading data via the API, merging data tables by type, and 
     converting formats. For more information, see the readme file at <https://github.com/NEONScience/NEON-utilities>.
 Depends: R (>= 3.6)
-Imports: httr, jsonlite, jose, downloader, data.table, utils, R.utils, stats, tidyr, dplyr, pbapply, parallel, curl, arrow, rlang
+Imports: httr, jsonlite, jose, downloader, data.table (>= 1.17.8), utils, R.utils, stats, tidyr, dplyr, pbapply, parallel, curl, arrow, rlang
 Suggests: rhdf5, terra, testthat, fasttime
 License: AGPL-3
 URL: https://github.com/NEONScience/NEON-utilities
